@@ -3,6 +3,7 @@
 // RcppDatetimeVector.cpp: Rcpp R/C++ interface class library -- Datetime vector support
 //
 // Copyright (C) 2008 - 2009 Dirk Eddelbuettel
+// Copyright (C) 2010	     Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -28,18 +29,13 @@ RcppDatetimeVector::RcppDatetimeVector(SEXP vec) {
     int len = Rf_length(vec);
     if (len == 0)
 	throw std::range_error("RcppDatetimeVector: null vector in constructor");
-    v = new RcppDatetime[len];
+    v.resize(len);
     for (i = 0; i < len; i++)
 	v[i] = RcppDatetime(REAL(vec)[i]);
-    length = len;
 }
 
-RcppDatetimeVector::~RcppDatetimeVector() {
-    delete [] v;
-}
-
-RcppDatetime & RcppDatetimeVector::operator()(int i) const {
-    if (i < 0 || i >= length) {
+const RcppDatetime & RcppDatetimeVector::operator()(unsigned int i) const {
+    if (i >= v.size()) {
 	std::ostringstream oss;
 	oss << "RcppDatetimeVector: subscript out of range: " << i;
 	throw std::range_error(oss.str());
@@ -48,11 +44,11 @@ RcppDatetime & RcppDatetimeVector::operator()(int i) const {
 }
 
 int RcppDatetimeVector::size() const { 
-    return length; 
+    return v.size(); 
 }
 
-void RcppDatetimeVector::set(int i, const RcppDatetime &dt) {
-    if (i < 0 || i >= length) {
+void RcppDatetimeVector::set(unsigned int i, const RcppDatetime &dt) {
+    if (i >= v.size()) {
 	std::ostringstream oss;
 	oss << "RcppDatetimeVector: subscript out of range: " << i;
 	throw std::range_error(oss.str());
